@@ -196,10 +196,9 @@ class TarballBranch(Branch):
                 try:
                     patchfile = httpcache.load(patch, nonetwork=buildscript.config.nonetwork)
                 except urllib2.HTTPError, e:
-                    return (self.STATE_CONFIGURE,
-                            'could not download patch (error: %s)' % e.code, [])
+                    raise BuildStateError('could not download patch (error: %s)' % e.code)
                 except urllib2.URLError, e:
-                    return (self.STATE_CONFIGURE, 'could not download patch', [])
+                    raise BuildStateError('could not download patch')
             elif self.repository.moduleset_uri:
                 # get it relative to the moduleset uri, either in the same
                 # directory or a patches/ subdirectory
