@@ -1,6 +1,11 @@
 2008-02-16  Frederic Peters  <fpeters@0d.be>
 
-	* jhbuild/versioncontrol/tarball.py: added missing import
+	* jhbuild/versioncontrol/tarball.py: raise BuildStateError when
+	downloading patch fails.
+
+2008-02-16  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/versioncontrol/tarball.py: added missing import.
 	(closes: #513830)
 
 2008-02-16  Frederic Peters  <fpeters@0d.be>
